--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: aguai-wiki
-description: 光之世界
+title: linux-aguai
+description: wiki for aguai
 show_downloads: true
 git_branch: master
-logo_url: https://github.com/aguaiyoung/aguaiyoung.github.io/blob/master/logo.png
+logo_url: https://upload.wikimedia.org/wikipedia/en/thumb/8/80/Wikipedia-logo-v2.svg/1122px-Wikipedia-logo-v2.svg.png
 google_analytics:
 theme: 
 wiki_folder: wiki
