--- a/_config.yml
+++ b/_config.yml
@@ -110,10 +110,10 @@ plugins:
 inc_before_toc : 
 inc_after_toc : 
 inc_before_content : 
-inc_after_content : 
+inc_after_content : "aguaiyoung/comments.html"
 inc_before_footer : 
 inc_after_footer : 
-inc_before_head : 
+inc_before_head : "aguaiyoung/head.html"
 inc_after_head : 
 inc_before_meta : 
 inc_after_meta : 
@@ -128,7 +128,7 @@ inc_after_tail :
 inc_before_tools : 
 inc_after_tools : 
 
-inc_before_page_list :
+inc_before_page_list : "aguaiyoung/sidebar.html"
 inc_after_page_list :
 inc_before_post_list :
 inc_after_post_list :
